; ModuleID = '/home/carl/AnghaBench/linux/fs/cifs/extr_readdir.c_cifs_fill_dirent_both.c'
source_filename = "/home/carl/AnghaBench/linux/fs/cifs/extr_readdir.c_cifs_fill_dirent_both.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cifs_dirent = type { i32, i32, i32* }
%struct.TYPE_3__ = type { i32, i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cifs_dirent*, %struct.TYPE_3__*)* @cifs_fill_dirent_both to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cifs_fill_dirent_both(%struct.cifs_dirent* %0, %struct.TYPE_3__* %1) #0 {
  %3 = alloca %struct.cifs_dirent*, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  store %struct.cifs_dirent* %0, %struct.cifs_dirent** %3, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %4, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 2
  %7 = load i32*, i32** %6, align 8
  %8 = getelementptr inbounds i32, i32* %7, i64 0
  %9 = load %struct.cifs_dirent*, %struct.cifs_dirent** %3, align 8
  %10 = getelementptr inbounds %struct.cifs_dirent, %struct.cifs_dirent* %9, i32 0, i32 2
  store i32* %8, i32** %10, align 8
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @le32_to_cpu(i32 %13)
  %15 = load %struct.cifs_dirent*, %struct.cifs_dirent** %3, align 8
  %16 = getelementptr inbounds %struct.cifs_dirent, %struct.cifs_dirent* %15, i32 0, i32 1
  store i32 %14, i32* %16, align 4
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = load %struct.cifs_dirent*, %struct.cifs_dirent** %3, align 8
  %21 = getelementptr inbounds %struct.cifs_dirent, %struct.cifs_dirent* %20, i32 0, i32 0
  store i32 %19, i32* %21, align 8
  ret void
}

declare dso_local i32 @le32_to_cpu(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
